--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -76,3 +76,7 @@ body {
   padding: 20px;
   cursor: pointer;
 }
+
+.bg-custom-1 {
+  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+}
